--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,11 @@ account_id = ""
 route = ""
 workers_dev = true
 
+kv_namespaces = [
+	 { binding = "STOCK_CHART_KV", id = "eb233bb60c1d4991ad25f6bd7d7d4e28", preview_id = "eb233bb60c1d4991ad25f6bd7d7d4e28" }
+]
 [build]
 command = "yarn install && yarn build"
 [build.upload]
 format = "service-worker"
+
